--- a/lib/cg_genome_seq.wiki
+++ b/lib/cg_genome_seq.wiki
@@ -23,8 +23,10 @@ ways (colon, dash, comma, space or newlines), e.g., all of the following formats
 ; **dbdir**: directory containing reference genomes and variation data
 
 == Options ==
-; **-f freq** (--freq): only softmask (lowercase) dbsnp variants if they have a frequency > freq (default is 0, use -1 to include all)
-; **-n freqn** (--freqn): only mask (using N) dbsnp variants if they have a frequency > freqn (default is 0.2, use -1 to include all)
+; **-f freq** (--freq): only softmask (lowercase) dbsnp variants if they have a frequency > freq (given as a fraction, default is 0, use -1 to include all)
+; **-fp freqp** (--freqp): only softmask (lowercase) dbsnp variants if they have a frequency > freqp (given as a percentage, default is 0, use -1 to include all)
+; **-n freqn** (--freqn): only mask (using N) dbsnp variants if they have a frequency > freqn (given as a fraction, default is 0.2, use -1 to include all)
+; **-np freqnp** (--freqnp): only mask (using N) dbsnp variants if they have a frequency > freqnp (given as a percentage, default is 20, use -1 to include all)
 ; **-p snpdbpattern** (--snpdbpattern): determines which variant databases are used (dbdir/var_*snpdbpattern*.tsv.gz). default is "snp" for dbsnp.
 you can e.g. use "Common" for the common variants in dbsnp
 ; **-d delsize** (--delsize): only mask (using N) dbsnp variants if they are smaller than delsize (default is 5, use -1 to include all)
