--- a/lib/cg_gene2reg.wiki
+++ b/lib/cg_gene2reg.wiki
@@ -19,6 +19,13 @@ includes the following extra fields:
 ; gene: gene name
 ; transcript: transcript id
 
+== Options ==
+; -upstream nrbases: if **nrbases** > 0 upstream and downstream regions will be added, where **nrbases** gives how many bases will be 
+assigned as upstream/downstream (default 0)
+; -nocds 0/1: if 1 (default = 0) indications of cdsStart and cdsEnd are not taken into account, 
+and all genes will be handled as non coding, meaning that also for coding genes all regions will be output
+as type RNA instead of UTR and CDS, and exons containf start or stop site are in one (RNA) region.
+
 == Arguments ==
 ; **infile**: file to be converted, if not given, uses stdin. File may be compressed.
 ; **outfile**: write results to outfile, if not given, uses stdout
